Dapper nuget added

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@
 
 /DailyWorkTrackDataAccess/.vs/DailyWorkTrackDataAccess/DesignTimeBuild/.dtbcache.v2
 /DailyWorkTrackDataAccess/.vs/DailyWorkTrackDataAccess/v17/.suo
+/DailyWorkTrackDataAccess/.vs/DailyWorkTrackDataAccess/FileContentIndex/8c2a06ba-7e2f-4fdd-8c3f-aa6581bdab0f.vsidx
+/DailyWorkTrackDataAccess/.vs/DailyWorkTrackDataAccess/FileContentIndex/77632c49-b06a-49c5-bdd3-6b25ad2dd3d8.vsidx
+/DailyWorkTrackDataAccess/obj/project.assets.json
+/DailyWorkTrackDataAccess/obj/project.nuget.cache
+/DailyWorkTrackDataAccess/obj/Debug/net6.0/DailyWorkTrackDataAccess.csproj.AssemblyReference.cache
+/DailyWorkTrackDataAccess/obj/Debug/net6.0/DailyWorkTrackDataAccess.assets.cache
+/DailyWorkTrackDataAccess/obj/DailyWorkTrackDataAccess.csproj.nuget.dgspec.json
