Added package version

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,13 @@
 /DailyWorkTrackDataAccess/obj/Debug/net6.0/DailyWorkTrackDataAccess.csproj.AssemblyReference.cache
 /DailyWorkTrackDataAccess/obj/Debug/net6.0/DailyWorkTrackDataAccess.assets.cache
 /DailyWorkTrackDataAccess/obj/DailyWorkTrackDataAccess.csproj.nuget.dgspec.json
+/DailyWorkTrackDataAccess/.vs/DailyWorkTrackDataAccess/FileContentIndex/06544d0f-dd89-48f9-8591-aee67b8cfe45.vsidx
+/DailyWorkTrackDataAccess/bin/Debug/net6.0/DailyWorkTrackDataAccess.deps.json
+/DailyWorkTrackDataAccess/bin/Debug/net6.0/DailyWorkTrackDataAccess.dll
+/DailyWorkTrackDataAccess/bin/Debug/net6.0/DailyWorkTrackDataAccess.pdb
+/DailyWorkTrackDataAccess/obj/Debug/net6.0/ref/DailyWorkTrackDataAccess.dll
+/DailyWorkTrackDataAccess/obj/Debug/net6.0/refint/DailyWorkTrackDataAccess.dll
+/DailyWorkTrackDataAccess/obj/Debug/net6.0/DailyWorkTrackDataAccess.csproj.CoreCompileInputs.cache
+/DailyWorkTrackDataAccess/obj/Debug/net6.0/DailyWorkTrackDataAccess.csproj.FileListAbsolute.txt
+/DailyWorkTrackDataAccess/obj/Debug/net6.0/DailyWorkTrackDataAccess.dll
+/DailyWorkTrackDataAccess/obj/Debug/net6.0/DailyWorkTrackDataAccess.pdb
