--- a/DailyWorkTrackDataAccess/DailyWorkTrackDataAccess.csproj
+++ b/DailyWorkTrackDataAccess/DailyWorkTrackDataAccess.csproj
@@ -5,7 +5,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<Version>1.0.0</Version>
-		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 	</PropertyGroup>
 
 	<ItemGroup>
