--- a/DailyWorkTrackDataAccess/DailyWorkTrackDataAccess.csproj
+++ b/DailyWorkTrackDataAccess/DailyWorkTrackDataAccess.csproj
@@ -12,4 +12,9 @@
 		<PackageReference Include="Dapper" Version="2.0.123" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Repository\Interfaces\" />
+	  <Folder Include="Service\Interfaces\" />
+	</ItemGroup>
+
 </Project>
